--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "droptienda/json-machine",
-    "description": "Efficient, easy-to-use and fast JSON pull parser",
+    "name": "zm-json-machine",
+    "description": "Efficient, easy-to-use and fast JSON pull parser. You can easily install this package",
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "dt-rocks"
+            "name": "Zunaid Miah"
         }
     ],
     "scripts": {
@@ -18,7 +18,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": ">=5.6"
+        "php": ">=7.0"
     },
     "require-dev": {
         "ext-json": "*",
